--- a/src/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data.csproj
+++ b/src/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MCB.Demos.ShopDemo.Microservices.Customer.Domain\MCB.Demos.ShopDemo.Microservices.Customer.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
