--- a/src/MCB.Demos.ShopDemo.Microservices.Customer.Services.WebApi.DependencyInjection/MCB.Demos.ShopDemo.Microservices.Customer.Services.WebApi.DependencyInjection.csproj
+++ b/src/MCB.Demos.ShopDemo.Microservices.Customer.Services.WebApi.DependencyInjection/MCB.Demos.ShopDemo.Microservices.Customer.Services.WebApi.DependencyInjection.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.13.0-alpha" />
 		<PackageReference Include="MCB.Core.Infra.CrossCutting.DependencyInjection" Version="0.6.0-alpha" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 	</ItemGroup>
@@ -16,6 +17,7 @@
 		<ProjectReference Include="..\MCB.Demos.ShopDemo.Microservices.Customer.Domain.Entities\MCB.Demos.ShopDemo.Microservices.Customer.Domain.Entities.csproj" />
 		<ProjectReference Include="..\MCB.Demos.ShopDemo.Microservices.Customer.Domain\MCB.Demos.ShopDemo.Microservices.Customer.Domain.csproj" />
 		<ProjectReference Include="..\MCB.Demos.ShopDemo.Microservices.Customer.Infra.CrossCutting\MCB.Demos.ShopDemo.Microservices.Customer.Infra.CrossCutting.csproj" />
+		<ProjectReference Include="..\MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data\MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data.csproj" />
 	</ItemGroup>
 
 </Project>
