--- a/src/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data.csproj
+++ b/src/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MCB.Demos.ShopDemo.Microservices.Customer.Domain\MCB.Demos.ShopDemo.Microservices.Customer.Domain.csproj" />
   </ItemGroup>
 
