--- a/src/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data.csproj
+++ b/src/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data/MCB.Demos.ShopDemo.Microservices.Customer.Infra.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.70" />
   </ItemGroup>
 
   <ItemGroup>
