feat: add mongo and redis data contexts

--- a/src/MCB.Demos.ShopDemo.Microservices.Customer.Services.WebApi/appsettings.json
+++ b/src/MCB.Demos.ShopDemo.Microservices.Customer.Services.WebApi/appsettings.json
@@ -10,5 +10,12 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "Redis": {
+    "ConnectionString": ""
+  },
+  "MongoDb": {
+    "ConnectionString": "",
+    "DatabaseName": ""
   }
 }
